--- a/README.Rmd
+++ b/README.Rmd
@@ -109,9 +109,11 @@ This is followed by a summary of the results of the optimization:
 Technical workflow with simple example code
 </h4>
 
-```{r, results='hide', message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
+```{r, results='hide',message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
 install.packages("optimLanduse", repos = "https://ftp.gwdg.de/pub/misc/cran/")
+```
 
+```{r, message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
 library(optimLanduse)
 library(readxl)
 library(ggplot2)
@@ -122,12 +124,14 @@ library(ggsci)
 path <- exampleData("exampleGosling.xlsx")
 dat <- read_excel(path)
 
+head(dat)
+
 # Initializing an optimLanduse-object using initScenario()
 init <- initScenario(dat,
-                     uValue = 3,
+                     uValue = 2,
                      optimisticRule = "expectation", 
                      # optimistic contribution of each indicator directly defined by their average 
-                     fixDistance = 3) 
+                     fixDistance = NA) 
                      # 3 is the default
 
 # Solve the initialized optimLanduse object with the solveScenario() function                     
@@ -149,8 +153,41 @@ result$landUse %>% gather(key = landUseOption, value = landUseShare, 1:6) %>%
   guides(fill=guide_legend(title=""))
 ```
 
+```{r, results='hide', message=FALSE, warning=FALSE, fig.height = 5, fig.width = 10}
+# Performance calculations
+performance <- calcPerformance(result)
+
+performance$scenarioTable$performance <- performance$scenarioTable$performance * 100 
+
+ggplot(performance$scenarioTable,
+       aes(x = indicator,
+           y = performance,
+           color = indicator)) +
+  geom_point() +
+  geom_hline(yintercept =
+               min(performance$scenarioTable$performance),
+             linetype = "dashed", color = "red") +
+  guides(color=guide_legend(title="",
+                            nrow = 10)) +
+  theme_classic() + 
+  theme(text = element_text(size = 18),
+        legend.position="right") +
+  theme(
+        axis.ticks.x=element_blank())+
+  scale_x_discrete(labels = seq(1, 10)) +
+  labs(y = "Min-max normalized indicator value (%)",
+       x = "Indicators") + 
+  scale_y_continuous(breaks = seq(0, 101, 10), 
+                     limits = c(0, 101))+
+  geom_hline(aes(yintercept=100), size =1) + 
+  annotate(geom = "Text", x = 6, y = 100, label = "Maximum achievable indicator level",
+           vjust = -1)
+
+
+```
+
 <h4>
-Calculations for different uncertainty levels
+Calculations for different uncertainty levels and fixDistance
 </h4>
 
 ```{r, fig.height = 3, fig.width = 4}
@@ -164,7 +201,7 @@ init_u0 <- initScenario(dat,
                      # optimistic contribution of each indicator directly defined by their average 
                      fixDistance = 3) 
                      # 3 is the default
-                     
+                  
 # Solve the initialized optimLanduse object with the solveScenario() function                 
 result_u0 <- solveScenario(x = init_u0)
 
@@ -185,34 +222,6 @@ result_u0$landUse %>% gather(key = landUseOption, value = landUseShare, 1:6) %>%
         axis.ticks.x=element_blank()) + 
   guides(fill=guide_legend(title=""))
 
-
-# Performance calculations
-performance_u0 <- calcPerformance(result_u0)
-
-performance_u0$scenarioTable$performance <- performance_u0$scenarioTable$performance * 100 
-
-ggplot(performance_u0$scenarioTable,
-       aes(x = indicator,
-           y = performance,
-           color = indicator)) +
-  geom_point() +
-  geom_hline(yintercept =
-               min(performance_u0$scenarioTable$performance),
-             linetype = "dashed", color = "red") +
-  guides(color=guide_legend(title="",
-                            nrow = 5)) +
-  theme_classic() + 
-  theme(text = element_text(size = 18),
-        legend.position="bottom") +
-  theme(axis.title.x=element_blank(),
-        axis.ticks.x=element_blank())+
-  scale_x_discrete(labels = seq(1, 10)) +
-  labs(y = "Min-max normalized indicator value (%)") + 
-  scale_y_continuous(breaks = seq(0, 101, 10), 
-                     limits = c(0, 101))+
-  geom_hline(aes(yintercept=100), size =1) + 
-  annotate(geom = "Text", x = 6, y = 100, label = "Maximum achievable indicator level",
-           vjust = -1)
 
 #### uValue == 3 ####
 
@@ -240,34 +249,6 @@ result_u3$landUse %>% gather(key = landUseOption, value = landUseShare, 1:6) %>%
   guides(fill=guide_legend(title=""))
 
 
-# Performance calculations
-performance_u3 <- calcPerformance(result_u3)
-
-performance_u3$scenarioTable$performance <- performance_u3$scenarioTable$performance * 100 
-
-ggplot(performance_u3$scenarioTable,
-       aes(x = indicator,
-           y = performance,
-           color = indicator)) +
-  geom_point() +
-  geom_hline(yintercept =
-               min(performance_u3$scenarioTable$performance),
-             linetype = "dashed", color = "red") +
-  guides(color=guide_legend(title="",
-                            nrow = 5)) +
-  theme_classic() + 
-  theme(text = element_text(size = 18),
-        legend.position="bottom") +
-  theme(axis.title.x=element_blank(),
-        axis.ticks.x=element_blank())+
-  scale_x_discrete(labels = seq(1, 10)) +
-  labs(y = "Min-max normalized indicator value (%)") + 
-  scale_y_continuous(breaks = seq(0, 101, 10), 
-                     limits = c(0, 101))+
-  geom_hline(aes(yintercept=100), size =1) + 
-  annotate(geom = "Text", x = 6, y = 100, label = "Maximum achievable indicator level",
-           vjust = -1)
-
 ```
 
 <h5>
@@ -294,7 +275,7 @@ for(i in u) {
 
 loopDf[, 3:8] <- loopDf[,3:8] * 100
 
-loopDf %>% gather(key = "land-use option", value = "land-use share", -u) %>%
+loopDf %>% gather(key = "land-use option", value = "land-use share", -u, -beta) %>%
   ggplot(aes(y = `land-use share`, x = u, fill = `land-use option`)) + 
   geom_area(alpha = .8, color = "white") + theme_minimal()+
   labs(x = "Uncertainty level", y = "Allocated share (%)") + 
@@ -324,7 +305,7 @@ names(applyDf) <- c("u", "beta", names(result$landUse))
 
 applyDf[, 3:8] <- applyDf[,3:8] * 100
 
-applyDf %>% gather(key = "land-use option", value = "land-use share", -u) %>%
+applyDf %>% gather(key = "land-use option", value = "land-use share", -u, -beta) %>%
   ggplot(aes(y = `land-use share`, x = u, fill = `land-use option`)) + 
   geom_area(alpha = .8, color = "white") + theme_minimal()+
   labs(x = "Uncertainty level", y = "Allocated share (%)") + 
@@ -339,6 +320,12 @@ applyDf %>% gather(key = "land-use option", value = "land-use share", -u) %>%
         legend.position = "bottom")
 
 ```
+
+Earlier more pasture because of larger uncertainty frame (TBD)
+
+<h4>
+Sophisticated application
+</h4>
 
 
 <h3>
