--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ This chapter provides brief overview over the package functions. For detailed in
 
 The *initScenario()* function combines the user settings with the data into an *optimLanduse*-object ready for solving. The following input data are required:
 
--   *Coefficients table*: The package is **only capable** of processing a long-oriented type of data structure. All combinations of land cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table **must follow** the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. All further columns will be dropped if passed.
+-   *Coefficients table*: The package is only capable of processing a long-oriented type of data structure. All combinations of land cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction of the respective land-cover and indicator combination. The column names of the table must follow the expected nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. All further columns will be dropped if passed.
 
 <p align="center">
   <img width="673.4" height="298.2" src="./man/figures/exampleGraphic.png">
@@ -98,7 +98,7 @@ This is followed by a summary of the results of the optimization:
 <a name="5. Beispielhafte Anwendung">Use-case</a>
 </h3>
 
-We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is openly accessible in the *Supplemental material 1* of Gosling et al. (2020) and also firmly integrated into the optimLanduse package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the expected *optimLanduse* format, such that it can be used without any data processing.
+We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the optimLanduse package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the expected *optimLanduse* format, such that it can be used without any data processing.
 
 Enriching agricultural farms with forest plantations has potential to enhance the ecosystem functioning of farms in Panama. Gosling et al. therefore used the optimization model presented here to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land use alternatives, which represent the farmers' goals. A subsequent survey of farmers provided the empirical basis in the form of indicators' expectations (arithmetic mean) and uncertainties (standard deviation) for each land-cover alternative. Descriptions of the land-cover alternatives and indicators can be found in tables 1 and 2 in Gosling et al. (2020).
 
